Fixed: restore default wouldn't save settings

--- a/chrome-extension/app/styles/main.css
+++ b/chrome-extension/app/styles/main.css
@@ -410,6 +410,10 @@ body {
 	box-sizing: border-box;
 }
 
+#settings .property .value #txtProxyPort {
+	width: 60px;
+}
+
 #settings .property .value textarea {
 	height: 150px;
 	font-family: menlo;
