Added editor path example for windows

--- a/chrome-extension/app/styles/main.css
+++ b/chrome-extension/app/styles/main.css
@@ -15,6 +15,14 @@ body {
 	-webkit-user-select: none;
 }
 
+.os-osx .show-os-windows {
+	display: none;
+}
+
+.os-windows .show-os-osx {
+	display: none;
+}
+
 #requestsContainer {
 	flex: auto;
 	overflow-x: none;
