--- a/chrome-extension/app/styles/main.css
+++ b/chrome-extension/app/styles/main.css
@@ -1,9 +1,9 @@
 body {
-    padding: 0px;
-    font-family: 'Lucida Grande', sans-serif;
-    margin: 0px;
+	padding: 0px;
+	font-family: 'Lucida Grande', sans-serif;
+	margin: 0px;
 	/*color: rgb(136, 136, 136);*/
-    color: rgb(48, 57, 66);
+	color: rgb(48, 57, 66);
 	font-size: 11px;
 }
 
@@ -45,7 +45,7 @@ body {
 }
 
 .request-item .request-item-link {
-    color: rgb(48, 57, 66);
+	color: rgb(48, 57, 66);
 	display: inline-block;
 	text-overflow: ellipsis;
 	overflow: hidden;
@@ -110,7 +110,7 @@ body {
 
 .request-item-discard-changes {
 	text-decoration: none;
-    color: rgb(48, 57, 66);
+	color: rgb(48, 57, 66);
 	font-weight: normal;
 }
 
@@ -156,6 +156,7 @@ body {
 }
 
 .sidebar-list-item {
+	cursor: pointer;
 	flex: none;
 	color: black;
 	text-shadow: 0px 1px white;
@@ -168,10 +169,6 @@ body {
 .sidebar-list-item-big {
 	font-weight: bold;
 	padding: 10px;
-}
-
-.sidebar-list-item, .sidebar-list-item div, .sidebar-list-item span {
-	cursor: default;
 }
 
 .sidebar-list-item.selected {
@@ -261,11 +258,8 @@ body {
 	position: relative;
 }
 
-#rulesListItem {
-	display: none;
-}
-
 .rules-list-item {
+	cursor: pointer;
 	display: flex;
 	height: 27px;
 	white-space: nowrap;
@@ -273,7 +267,7 @@ body {
 	clear: left;
 }
 
-.rules-list-item:hover {
+.rules-list-item:not(.selected):hover {
 	background: rgb(223, 223, 223);
 }
 
@@ -436,47 +430,47 @@ body {
 }
 
 #settings .properties::-webkit-scrollbar {
-    width: 11px;
+	width: 11px;
 }
 
 #settings .properties::-webkit-scrollbar-corner,
 #settings .properties::-webkit-resizer {
-    display: none;
+	display: none;
 }
 
 #settings .properties::-webkit-scrollbar-thumb:vertical {
-    background: linear-gradient(to right, rgb(128, 128, 128), rgb(96, 96, 96) 40%, rgb(128, 128, 128));
-    border-radius: 5px;
-    min-height: 20px;
+	background: linear-gradient(to right, rgb(128, 128, 128), rgb(96, 96, 96) 40%, rgb(128, 128, 128));
+	border-radius: 5px;
+	min-height: 20px;
 }
 
 #settings .properties::-webkit-scrollbar-thumb:vertical:hover,
 #settings .properties::-webkit-scrollbar-thumb:vertical:active {
-    background: linear-gradient(to right, rgb(176, 176, 176), rgb(144, 144, 144) 40%, rgb(176, 176, 176));
+	background: linear-gradient(to right, rgb(176, 176, 176), rgb(144, 144, 144) 40%, rgb(176, 176, 176));
 }
 
 #settings .properties::-webkit-scrollbar-track:vertical {
-    background: linear-gradient(to right, rgb(10, 10, 10), rgb(32, 32, 32) 25%, rgb(32, 32, 32));
-    border-radius: 5px;
+	background: linear-gradient(to right, rgb(10, 10, 10), rgb(32, 32, 32) 25%, rgb(32, 32, 32));
+	border-radius: 5px;
 }
 
-#settings .property {
-	margin-bottom: 20px;
+.property {
+	margin-bottom: 10px;
 	clear: left;
 }
 
-#settings .property .label {
+.property .label, label {
 	width: 200px;
 	line-height: 26px;
 	font-size: 13px;
 }
 
-#settings .property-inline .label {
+.property-inline .label, label {
 	float: left;
 }
 
-#settings .property .value input, #settings .property .value textarea {
-	width: 300px;
+.property .value input, .property .value textarea {
+	width: 350px;
 	border: 1px solid #aaa;
 	font-size: 13px;
 	padding: 3px;
@@ -484,26 +478,32 @@ body {
 	box-sizing: border-box;
 }
 
-#settings .property .value #txtProxyPort {
+.property .value input[disabled], .property .value textarea[disabled] {
+	background: #f7f7f7;
+	border-color: #ccc;
+	color: #777;
+}
+
+.property .value #txtProxyPort {
 	width: 60px;
 }
 
-#settings .property .value textarea {
+.property .value textarea {
 	height: 150px;
-	font-family: menlo;
+	font-family: menlo, monospace;
 	font-size: 11px;
 }
 
-.os-windows #settings .property .value textarea {
+.os-windows .property .value textarea {
 	font-family: Consolas, 'Lucida Console', monospace;
 	font-size: 12px;
 }
 
-#settings .property .value input:focus, #settings .property .value textarea:focus {
+.property .value input:focus, .property .value textarea:focus {
 	outline: 1px solid #aaa;
 }
 
-#settings .property .tooltip {
+.property .tooltip {
 	line-height: initial;
 	margin-top: 3px;
 	color: #888;
@@ -511,7 +511,7 @@ body {
 	width: 190px;
 }
 
-.os-windows #settings .property .tooltip {
+.os-windows .property .tooltip {
 	font-size: 11px;
 }
 
@@ -614,4 +614,78 @@ body {
 		background-image: url(../images/statusbarButtonGlyphs_2x.png);
 	}
 
+}
+
+/****************************/
+/******* DEVTOOLS CSS *******/
+/****************************/
+
+.text-button {
+	outline-offset: -2px;
+	outline-width: medium;
+	background-image: linear-gradient(hsl(0, 0%, 93%), hsl(0, 0%, 93%) 38%, hsl(0, 0%, 87%));
+	border: 1px solid hsla(0, 0%, 0%, 0.25);
+	border-radius: 2px;
+	box-shadow: 0 1px 0 hsla(0, 0%, 0%, 0.08), inset 0 1px 2px hsla(0, 100%, 100%, 0.75);
+	color: hsl(0, 0%, 27%);
+	font-size: 12px;
+	margin: 0 1px 0 0;
+	text-shadow: 0 1px 0 hsl(0, 0%, 94%);
+	min-height: 2em;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+body.inactive button.text-button, .text-button:disabled {
+	background-image: linear-gradient(#f1f1f1, #f1f1f1 38%, #e6e6e6);
+	border-color: rgba(80, 80, 80, 0.2);
+	box-shadow: 0 1px 0 rgba(80, 80, 80, 0.08), inset 0 1px 2px rgba(255, 255, 255, 0.75);
+	color: #aaa;
+}
+
+.text-button:not(:disabled):hover {
+	background-image: linear-gradient(hsl(0, 0%, 94%), hsl(0, 0%, 94%) 38%, hsl(0, 0%, 88%));
+	border-color: hsla(0, 0%, 0%, 0.3);
+	box-shadow: 0 1px 0 hsla(0, 0%, 0%, 0.12), inset 0 1px 2px hsla(0, 100%, 100%, 0.95);
+	color: hsl(0, 0%, 0%);
+}
+
+.text-button:not(:disabled):active {
+	background-image: linear-gradient(hsl(0, 0%, 91%), hsl(0, 0%, 91%) 38%, hsl(0, 0%, 84%));
+	box-shadow: none;
+	text-shadow: none;
+}
+
+.network-request-data {
+	padding: 8px;
+	overflow-y: auto;
+}
+
+.property .value table {
+	font-family: Menlo, monospace;
+}
+
+.os-windows .property .value table {
+	font-family: Consolas, 'Lucida Console', monospace;
+}
+
+.property .value table {
+	border: 1px solid rgb(200, 200, 200);
+	border-collapse: collapse;
+	padding: 3px;
+	width: 550px;
+}
+
+.property .value table tr:nth-child(odd) {
+	background: #f7f7f7;
+}
+
+.property .value table td {
+	border: 1px solid rgb(200, 200, 200);
+	padding: 3px;
+	word-break: break-all;
+}
+
+.property .value table td:first-child {
+	font-weight: bold;
 }
