Added contributors & links between pages

--- a/styles/all.css
+++ b/styles/all.css
@@ -186,6 +186,7 @@ a:hover {
 .footer a {
   color: #bbb;
   font-size: 0.9em;
+  margin-right: 10px;
   text-decoration: none; }
 
 @media (min-width: 992px) and (max-width: 1200px) {
